# distribi

./: .gitignore  Cargo.toml  README.md
example/reactions/: personReaction.lua  personReaction2.lua
example/structures/: Person.dst
example/structures/util/: Date.dst
src/: client.rs  json.lua  logger.rs  main.rs
src/reactors/: errors.rs  mod.rs
src/structures/: mod.rs  object.rs
