[package]
name = "distribi"
version = "0.1.0"
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
hlua = "0.4.1"
bincode = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
