[package]
authors = ["Nathan Hare <me@laspruca.nz>"]
edition = "2018"
name = "distribi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
bincode = "1"
chrono = "0.4.19"
colored = "2.0.0"
env_logger = "0.8.3"
hlua = "0.4.1"
log = "0.4.14"
regex = "1.5.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
walkdir = "2.3.2"
